# ArucoMarkerTest

./: CMakeLists.txt  aruco_test.cpp  default.yaml  readme.md
aruco/: CMakeLists.txt
aruco/include/opencv2/: aruco.hpp
aruco/src/: aruco.cpp
